- Implemented the lower_binedges Axis property.

- Implemented the upper_binedges Axis property.

- Added unit test for the constant_bin_width_axis Axis class.

- Adjusted the fill method so the user can pass a scalar to the ndvalues
  argument if the ndhist object is a 1-dimensional histogram. A series of values
  to fill into a 1-dimensional histogram can be passed as a single list of
  these values, a 1-dimensional ndarray of these values or a tuple with one
  element holding either a scalar of the values to fill or a list or ndarray of
  values to fill.

- Implemented ndhist's clear() method, that sets all bin content values to zero.
  If the ndhist object is a view, only the bins visible by the view are set to
  zero. This allows selective clearing.

- Renamed the rebin and rebin_axis method into merge_bins and merge_axis_bins,
  because that's what it is actually doing.
  It might be possible to implement an actual rebin method in the future, when
  the ndhist object would have a data source assigned for refilling the
  histogram.

- Implemented unit test for ndhist's rebin_axis method for 2D histograms.

- Implemented the rebin method of the ndhist class, that can take bp::tuple
  (or std::vector<intptr_t>) objects for the axis and nbins_to_merge arguments
  in order to operate on several axes.

- Introduced the copy=True kwarg to ndhist's rebin_axis method. If set to
  ``True``, a deepcopy of the ndhist object is created first and the rebin
  operation is performed on that copy. The default is ``True`` in order to have
  by default the same behaviour as dashi's rebin_axis method.

- Zero bins, that would be discarded by ndhist's rebin_axis method when the axis
  is extendable and the nbins_to_merge is not a true divisor of the number of
  bins of the axis. Otherwise such bins would have a pre-set value when the axis
  gets extended after the rebin operation.

- Implemented the ndhist rebin_axis(axis, nbins_to_merge) method that changes